# trello-automation

./: .gitignore  LICENSE.txt  package-lock.json  package.json  pyproject.toml  serverless.yml  shadow-cljs.edn
config/: config.edn
src/cljs/: user.cljs
src/serverless/: core.cljs
src/trello_automation/: archive.cljs  core.cljs  http.cljs  trello.cljs
trello_automation/: archive.py  handler.py  trello.py
